--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   display: inline-block;
   text-align: center;
   background: #000;
-  color: #fff;
+  color: #000;
   font-weight: bold;
   text-decoration: none;
 }
